Feat: 추첨 결과를 조회 할 때 페이징 기능 추가 및 신청 인원수 추가